2007-03-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkdirs.sh: RCS_BASE

2007-01-28  Thomas E. Dickey  <dickey@invisible-island.net>

	* HISTORY: tack's out of ncurses now.

	* Makefile.in: make install rule work

	* tack.h: bump to 1.03

	* Makefile.in: first cut of installing manpage

	* Makefile.in: tweaks to work after chopping out of ncurses tree

2007-01-27  Thomas E. Dickey  <dickey@invisible-island.net>

	* HISTORY: update to 1.03

	* README: FROM_KEYS

2007-01-13  Thomas E. Dickey  <dickey@invisible-island.net>

	* Makefile.in: FROM_KEYS

	* configure: RCS_BASE

	* configure.in, aclocal.m4: FROM_KEYS

2006-12-23  Thomas E. Dickey  <dickey@invisible-island.net>

	* modules: FROM_KEYS

2006-12-22  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.guess: RCS_BASE

2006-12-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.sub: RCS_BASE

2006-11-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* output.c: FROM_KEYS

	* modes.c: from ncurses

	* init.c, fun.c: FROM_KEYS

	* crum.c: from ncurses

	* color.c, charset.c, tack.h: FROM_KEYS

2006-06-24  Thomas E. Dickey  <dickey@invisible-island.net>

	* control.c, edit.c: FROM_KEYS

2006-05-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* sync.c: FROM_KEYS

2006-04-22  Thomas E. Dickey  <dickey@invisible-island.net>

	* tack.1: FROM_KEYS

2005-09-17  Thomas E. Dickey  <dickey@invisible-island.net>

	* ansi.c, pad.c, sysdep.c: FROM_KEYS

	* menu.c, scan.c, tack.c: from ncurses

	* COPYING: fix address

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: resync with my-autoconf

2002-06-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkinstalldirs: RCS_BASE

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: RCS_BASE

1999-02-07  Thomas E. Dickey  <dickey@clark.net>

	* HISTORY: nit

	* init.c: tweak to make this build after renaming as per Alexander

1998-09-26  Thomas E. Dickey  <dickey@clark.net>
